--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "fontawesome": "~4.3.0",
-    "lodash": "~3.6.0"
+    "lodash": "~3.6.0",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
