--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.3.0",
     "fontawesome": "~4.3.0",
     "lodash": "~3.6.0",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "jquery": "~2.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
