--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "fontawesome": "~4.3.0",
     "lodash": "~3.6.0",
     "angular-ui-router": "~0.2.13",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "ngInfiniteScroll": "1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
