dodany flat, naprawiony proxy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "moviesng",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-less": "^1.0.1"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
