--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~3.6.0",
     "angular-ui-router": "~0.2.13",
     "jquery": "~2.1.3",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "flat-ui": "~2.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
