--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-router": "~0.2.13",
     "jquery": "~2.1.3",
     "ngInfiniteScroll": "1.0.0",
-    "flat-ui": "~2.2.2"
+    "flat-ui": "~2.2.2",
+    "oauth-ng": "~0.3.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
