--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "jquery": "~2.1.3",
     "ngInfiniteScroll": "1.0.0",
     "flat-ui": "~2.2.2",
-    "oauth-ng": "~0.3.8"
+    "angular-oauth2": "~2.1.0",
+    "jso": "~2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
