--- a/bower.json
+++ b/bower.json
@@ -2,27 +2,30 @@
   "name": "movies-ng",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "jquery": "~2.1.3",
+    "angular": "~1.3.4",
+    "angular-messages": "^1.3.4",
+    "angular-sanitize": "^1.3.4",
+    "angular-touch": "^1.3.4",
+    "angular-ui-router": "~0.2.13",
+    "angular-animate": "~1.3.4",
+    "angular-cookies": "~1.3.4",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
+    "flat-ui": "~2.2.2",
+    "restangular": "~1.4.0",
     "fontawesome": "~4.3.0",
     "lodash": "~3.6.0",
-    "angular-ui-router": "~0.2.13",
-    "jquery": "~2.1.3",
     "ngInfiniteScroll": "1.0.0",
-    "flat-ui": "~2.2.2",
-    "angular-oauth2": "~2.1.0",
-    "jso": "~2.0.1"
+    "moment": "~2.10.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.4"
   },
-  "appPath": "app",
+  "resolutions": {
+    "jquery": "~2.1.1",
+    "angular": "~1.3.4",
+    "lodash": "~3.6.0"
+  },
+  "appPath": "src/app",
   "moduleName": "moviesNgApp"
 }
