--- a/bower.json
+++ b/bower.json
@@ -2,27 +2,32 @@
   "name": "movies-ng",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
-    "bootstrap-sass-official": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
+    "angular": "^1.4.0",
+    "angular-animate": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-messages": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0",
+    "angular-ui-router": "~0.2.15",
+    "angular-bootstrap": "~0.13.0",
+    "bootstrap-sass-official": "~3.3.4",    
     "fontawesome": "~4.3.0",
     "lodash": "~3.6.0",
-    "angular-ui-router": "~0.2.13",
-    "jquery": "~2.1.3",
+    "jquery": "~2.1.4",
     "ngInfiniteScroll": "1.0.0",
     "flat-ui": "~2.2.2",
-    "angular-oauth2": "~2.1.0",
-    "jso": "~2.0.1"
+    "malarkey": "yuanqing/malarkey#~1.3.0",
+    "toastr": "~2.1.1",
+    "moment": "~2.10.3",
+    "animate.css": "~3.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.4.0"
   },
-  "appPath": "app",
-  "moduleName": "moviesNgApp"
+  "resolutions": {
+    "jquery": "~2.1.4",
+    "angular": "~1.4.0"
+  }
 }
