--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,10 @@
   "name": "movies-ng",
   "version": "0.0.0",
   "dependencies": {
+    "URIjs": "uri.js#~1.16.0",
     "angular": "^1.4.5",
     "angular-animate": "^1.4.5",
+    "angular-bootstrap": "~0.13.0",
     "angular-cookies": "^1.4.5",
     "angular-messages": "^1.4.5",
     "angular-resource": "^1.4.5",
@@ -11,17 +13,16 @@
     "angular-sanitize": "^1.4.5",
     "angular-touch": "^1.4.5",
     "angular-ui-router": "~0.2.15",
-    "angular-bootstrap": "~0.13.0",
-    "bootstrap-sass-official": "~3.3.4",    
-    "fontawesome": "~4.3.0",
-    "lodash": "~3.6.0",
-    "jquery": "~2.1.4",
-    "ngInfiniteScroll": "1.0.0",
+    "animate.css": "~3.3.0",
+    "bootstrap-sass-official": "~3.3.4",
     "flat-ui": "~2.2.2",
+    "fontawesome": "~4.3.0",
+    "jquery": "~2.1.4",
+    "lodash": "~3.6.0",
     "malarkey": "yuanqing/malarkey#~1.3.0",
-    "toastr": "~2.1.1",
     "moment": "~2.10.3",
-    "animate.css": "~3.3.0"
+    "ngInfiniteScroll": "1.0.0",
+    "toastr": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
