--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-sanitize": "^1.4.5",
     "angular-touch": "^1.4.5",
     "angular-ui-router": "~0.2.15",
+    "angular-youtube-mb": "~1.1.1",
     "animate.css": "~3.3.0",
     "bootstrap-sass-official": "~3.3.4",
     "flat-ui": "~2.2.2",
